--- a/src/components/GalleryTurinSeries.astro
+++ b/src/components/GalleryTurinSeries.astro
@@ -1,8 +1,7 @@
 ---
-import { Picture } from "astro-imagetools/components";
-import { sharedPictureProps } from "../utils/sharedPictureProps";
 import Container from "./Container.astro";
 import PictureWrapper from "./PictureWrapper.astro";
+import "../styles/masonry.styles.css";
 ---
 
 <Container>
@@ -57,40 +56,3 @@ import PictureWrapper from "./PictureWrapper.astro";
     </div>
   </div>
 </Container>
-<style>
-  .row {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 4px;
-  }
-
-  /* Create four equal columns that sits next to each other */
-  .column {
-    flex: 25%;
-    max-width: 25%;
-    padding: 0 4px;
-  }
-
-  /* This is not working */
-  /* .column img {
-    margin-top: 8px;
-    vertical-align: middle;
-    width: 100%;
-  } */
-
-  /* Responsive layout - makes a two column-layout instead of four columns */
-  @media screen and (max-width: 800px) {
-    .column {
-      flex: 50%;
-      max-width: 50%;
-    }
-  }
-
-  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
-    .column {
-      flex: 100%;
-      max-width: 100%;
-    }
-  }
-</style>
