added POSTCSS nested support

--- a/src/components/GalleryPaintingsSeries.astro
+++ b/src/components/GalleryPaintingsSeries.astro
@@ -1,6 +1,6 @@
 ---
 import Container from "./Container.astro";
-import "../styles/masonry.styles.css";
+import "../styles/masonry.css";
 import PictureWrapper from "./PictureWrapper.astro";
 ---
 
