--- a/src/components/GalleryTurinSeries.astro
+++ b/src/components/GalleryTurinSeries.astro
@@ -1,7 +1,7 @@
 ---
 import Container from "./Container.astro";
 import PictureWrapper from "./PictureWrapper.astro";
-import "../styles/masonry.styles.css";
+import "../styles/masonry.css";
 ---
 
 <Container>
