--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -12,7 +12,7 @@ const { currentRoute } = Astro.props as Props;
 <nav
   class="bg-white px-2 sm:px-4 py-2.5 dark:bg-gray-900 fixed w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600 shadow-lg"
 >
-  <div class="container flex flex-wrap justify-between items-center mx-auto">
+  <div class="flex flex-wrap justify-between items-center mx-auto">
     <a href="/" class="flex items-center">
       <Avatar />
       <h1 class="self-center text-xl whitespace-nowrap dark:text-white">
