--- a/src/components/PictureWrapper.astro
+++ b/src/components/PictureWrapper.astro
@@ -1,7 +1,7 @@
 ---
 import { Picture } from "astro-imagetools/components";
 import { sharedPictureProps } from "../utils/sharedPictureProps";
-import "../styles/imagesOverlayEffect.styles.css";
+import "../styles/imagesOverlayEffect.css";
 export interface Props {
   src: string;
   title: string;
