--- a/src/pages/paintings.astro
+++ b/src/pages/paintings.astro
@@ -1,5 +1,5 @@
 ---
-import GalleryPaintingsSeries from "../components/GalleryPaintingsSeries.astro";
+import GalleryPaintingsSeries from "../components/GalleryPaintingsSeries/GalleryPaintingsSeries.index.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
