--- a/src/pages/turinSeries.astro
+++ b/src/pages/turinSeries.astro
@@ -1,5 +1,5 @@
 ---
-import GalleryTurinSeries from "../components/GalleryTurinSeries.astro";
+import GalleryTurinSeries from "../components/GalleryTurinSeries/GalleryTurinSeries.index.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
