--- a/src/pages/veniceSeries.astro
+++ b/src/pages/veniceSeries.astro
@@ -1,5 +1,5 @@
 ---
-import GalleryVeniceSeries from "../components/GalleryVeniceSeries.astro";
+import GalleryVeniceSeries from "../components/GalleryVeniceSeries/GalleryVeniceSeries.index.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
