--- a/src/components/MainGallery.astro
+++ b/src/components/MainGallery.astro
@@ -1,83 +1,43 @@
 ---
 import { Picture } from "astro-imagetools/components";
+import Container from "./Container.astro";
 ---
 
-<div class="row">
-  <div class="column">
-    <Picture
-      src="/src/images/firstgallery/1PlanetEarth.png"
-      alt="artwork called Planet Earth"
-    />
+<Container>
+  <div class="row">
+    <div class="column">
+      <Picture
+        src="/src/images/firstgallery/1PlanetEarth.png"
+        alt="artwork called Planet Earth"
+      />
+    </div>
+    <div class="column">
+      <Picture
+        src="/src/images/firstgallery/2Tothemusiccity.png"
+        alt="artwork called To the music city"
+      />
+    </div>
+    <div class="column">
+      <Picture
+        src="/src/images/firstgallery/3Through.png"
+        alt="artwork called Through"
+      />
+    </div>
+    <div class="column">
+      <Picture
+        src="/src/images/firstgallery/4Earth.png"
+        alt="artwork called Earth"
+      />
+    </div>
+    <div class="column">
+      <Picture
+        src="/src/images/firstgallery/5Accademia.png"
+        alt="artwork called Accademia"
+      />
+    </div>
+    <div class="column">
+      <Picture src="/src/images/firstgallery/6Why_.png" alt="artwork called Why"
+      />
+    </div>
   </div>
-  <div class="column">
-    <Picture
-      src="/src/images/firstgallery/2Tothemusiccity.png"
-      alt="artwork called To the music city"
-      width={1024}
-    />
-  </div>
-  <div class="column">
-    <Picture
-      src="/src/images/firstgallery/3Through.png"
-      alt="artwork called Through"
-      width={1024}
-    />
-  </div>
-  <div class="column">
-    <Picture
-      src="/src/images/firstgallery/4Earth.png"
-      alt="artwork called Earth"
-      width={1024}
-    />
-  </div>
-  <div class="column">
-    <Picture
-      src="/src/images/firstgallery/5Accademia.png"
-      alt="artwork called Accademia"
-      width={1024}
-    />
-  </div>
-  <div class="column">
-    <Picture
-      src="/src/images/firstgallery/6Why_.png"
-      alt="artwork called Why"
-      width={1024}
-    />
-  </div>
-</div>
-<style>
-  .row {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 4px;
-  }
-
-  /* Create four equal columns that sits next to each other */
-  .column {
-    flex: 25%;
-    max-width: 25%;
-    padding: 0 4px;
-  }
-
-  /* .column img {
-    margin-top: 8px;
-    vertical-align: middle;
-    width: 100%;
-  } */
-
-  /* Responsive layout - makes a two column-layout instead of four columns */
-  @media screen and (max-width: 800px) {
-    .column {
-      flex: 50%;
-      max-width: 50%;
-    }
-  }
-
-  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
-    .column {
-      flex: 100%;
-      max-width: 100%;
-    }
-  }
-</style>
+</Container>
