--- a/src/components/MainGallery.astro
+++ b/src/components/MainGallery.astro
@@ -1,43 +1,41 @@
 ---
-import { Picture } from "astro-imagetools/components";
 import Container from "./Container.astro";
+import GalleryPaintingsSeriesGroup1 from "./GalleryPaintingsSeries/GalleryPaintingsSeriesGroup1.astro";
+import GalleryPaintingsSeriesGroup2 from "./GalleryPaintingsSeries/GalleryPaintingsSeriesGroup2.astro";
+import GalleryPaintingsSeriesGroup3 from "./GalleryPaintingsSeries/GalleryPaintingsSeriesGroup3.astro";
+import GalleryPaintingsSeriesGroup4 from "./GalleryPaintingsSeries/GalleryPaintingsSeriesGroup4.astro";
+import GalleryTurinSeriesGroup1 from "./GalleryTurinSeries/GalleryTurinSeriesGroup1.astro";
+import GalleryTurinSeriesGroup2 from "./GalleryTurinSeries/GalleryTurinSeriesGroup2.astro";
+import GalleryTurinSeriesGroup3 from "./GalleryTurinSeries/GalleryTurinSeriesGroup3.astro";
+import GalleryTurinSeriesGroup4 from "./GalleryTurinSeries/GalleryTurinSeriesGroup4.astro";
+import GalleryVeniceSeriesGroup1 from "./GalleryVeniceSeries/GalleryVeniceSeriesGroup1.astro";
+import GalleryVeniceSeriesGroup2 from "./GalleryVeniceSeries/GalleryVeniceSeriesGroup2.astro";
+import GalleryVeniceSeriesGroup3 from "./GalleryVeniceSeries/GalleryVeniceSeriesGroup3.astro";
+import GalleryVeniceSeriesGroup4 from "./GalleryVeniceSeries/GalleryVeniceSeriesGroup4.astro";
+import "../styles/masonry.css";
 ---
 
 <Container>
   <div class="row">
     <div class="column">
-      <Picture
-        src="/src/images/firstgallery/1PlanetEarth.png"
-        alt="artwork called Planet Earth"
-      />
+      <GalleryPaintingsSeriesGroup1 />
+      <GalleryVeniceSeriesGroup1 />
+      <GalleryTurinSeriesGroup1 />
     </div>
     <div class="column">
-      <Picture
-        src="/src/images/firstgallery/2Tothemusiccity.png"
-        alt="artwork called To the music city"
-      />
+      <GalleryPaintingsSeriesGroup2 />
+      <GalleryVeniceSeriesGroup2 />
+      <GalleryTurinSeriesGroup2 />
     </div>
     <div class="column">
-      <Picture
-        src="/src/images/firstgallery/3Through.png"
-        alt="artwork called Through"
-      />
+      <GalleryPaintingsSeriesGroup3 />
+      <GalleryVeniceSeriesGroup3 />
+      <GalleryTurinSeriesGroup3 />
     </div>
     <div class="column">
-      <Picture
-        src="/src/images/firstgallery/4Earth.png"
-        alt="artwork called Earth"
-      />
-    </div>
-    <div class="column">
-      <Picture
-        src="/src/images/firstgallery/5Accademia.png"
-        alt="artwork called Accademia"
-      />
-    </div>
-    <div class="column">
-      <Picture src="/src/images/firstgallery/6Why_.png" alt="artwork called Why"
-      />
+      <GalleryPaintingsSeriesGroup4 />
+      <GalleryVeniceSeriesGroup4 />
+      <GalleryTurinSeriesGroup4 />
     </div>
   </div>
 </Container>
