--- a/src/components/HeroText.astro
+++ b/src/components/HeroText.astro
@@ -1,4 +1,4 @@
 <h2 class="text-white">
   <strong>LUCA <br /> PONTRANDOLFO</strong>
-  <div class="font-thin">PORFOLIO</div>
+  <div class="font-thin">PORTFOLIO</div>
 </h2>
