--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import { WEBSITE_URL } from "../utils/constants";
+import { WEBSITE_URL } from "../utils/constants.mjs";
 import SocialsBar from "./SocialsBar.astro";
 ---
 
