added prefetch and vite pwa

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,14 +1,12 @@
 ---
-import { WEBSITE_URL } from "../utils/constants.mjs";
 import SocialsBar from "./SocialsBar.astro";
 ---
 
 <footer class="p-4 mt-auto border-t-2 bg-white sm:p-6 dark:bg-gray-900">
   <div class="sm:flex sm:items-center sm:justify-between">
     <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
-      >© 2022 <a href={WEBSITE_URL} class="hover:underline"
-        >Luca Pontrandolfo
-      </a>. All Rights Reserved.
+      >© 2022 <a href="/" class="hover:underline">Luca Pontrandolfo</a>. All
+      Rights Reserved.
     </span>
     <SocialsBar />
   </div>
