--- a/src/components/NavbarDropdownItem.astro
+++ b/src/components/NavbarDropdownItem.astro
@@ -11,6 +11,7 @@ const { text, href, isActive } = Astro.props as Props;
 <li>
   <a
     href={href}
+    rel="prefetch"
     class={`block py-2 px-4 ${
       isActive ? "text-blue-700" : "text-gray-700"
     } hover:bg-gray-100
