--- a/src/components/NavbarItem.astro
+++ b/src/components/NavbarItem.astro
@@ -11,6 +11,7 @@ const { text, href, isActive } = Astro.props as Props;
 <li>
   <a
     href={href}
+    rel="prefetch"
     class={`block py-2 pr-4 pl-3 ${
       isActive ? "text-blue-700" : "text-gray-700"
     } rounded
