added astro critters

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,11 +6,11 @@ import HeroText from "../components/HeroText.astro";
 ---
 
 <Layout title="Homepage">
-  <!-- <Slideshow>
+  <Slideshow>
     <div class="flex items-center w-screen h-screen format text-5xl">
       <HeroText />
     </div>
-  </Slideshow> -->
+  </Slideshow>
   <Slideshow />
   <MainGallery />
 </Layout>
