--- a/src/components/Slideshow.astro
+++ b/src/components/Slideshow.astro
@@ -1,146 +1,12 @@
 ---
-import { BackgroundPicture } from "astro-imagetools/components";
 import { sharedPictureProps } from "../utils/sharedPictureProps";
+import { BackgroundPicture } from "astro-imagetools/components";
 ---
 
-<!-- <BackgroundPicture
+<BackgroundPicture
   attributes={{ class: "brightness-[0.2]" }}
   src="/src/images/firstgallery/3Through.png"
   {...sharedPictureProps}
 >
   <slot />
-</BackgroundPicture> -->
-<div class="relative">
-  <!-- Carousel wrapper -->
-  <div
-    class="relative h-56 overflow-hidden rounded-lg sm:h-64 xl:h-80 2xl:h-96"
-  >
-    <!-- Item 1 -->
-    <div id="carousel-item-1" class="hidden duration-700 ease-in-out">
-      <span
-        class="absolute text-2xl font-semibold text-white -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 sm:text-3xl dark:text-gray-800"
-        >First Slide
-      </span>
-      <img
-        src="/src/images/firstgallery/3Through.png"
-        class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
-        alt="..."
-      />
-    </div>
-    <!-- Item 2 -->
-    <div id="carousel-item-2" class="hidden duration-700 ease-in-out">
-      <img
-        src="/src/images/firstgallery/1PlanetEarth.png"
-        class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
-        alt="..."
-      />
-    </div>
-    <!-- Item 3 -->
-    <div id="carousel-item-3" class="hidden duration-700 ease-in-out">
-      <img
-        src="/src/images/firstgallery/3Through.png"
-        class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
-        alt="..."
-      />
-    </div>
-    <!-- Item 4 -->
-    <div id="carousel-item-4" class="hidden duration-700 ease-in-out">
-      <img
-        src="/src/images/firstgallery/1PlanetEarth.png"
-        class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
-        alt="..."
-      />
-    </div>
-  </div>
-  <!-- Slider indicators -->
-  <div class="absolute z-30 flex space-x-3 -translate-x-1/2 bottom-5 left-1/2">
-    <button
-      id="carousel-indicator-1"
-      type="button"
-      class="w-3 h-3 rounded-full"
-      aria-current="true"
-      aria-label="Slide 1"></button>
-    <button
-      id="carousel-indicator-2"
-      type="button"
-      class="w-3 h-3 rounded-full"
-      aria-current="false"
-      aria-label="Slide 2"></button>
-    <button
-      id="carousel-indicator-3"
-      type="button"
-      class="w-3 h-3 rounded-full"
-      aria-current="false"
-      aria-label="Slide 3"></button>
-    <button
-      id="carousel-indicator-4"
-      type="button"
-      class="w-3 h-3 rounded-full"
-      aria-current="false"
-      aria-label="Slide 4"></button>
-  </div>
-</div>
-<script>
-  const items = [
-    {
-      position: 0,
-      el: document.getElementById("carousel-item-1"),
-    },
-    {
-      position: 1,
-      el: document.getElementById("carousel-item-2"),
-    },
-    {
-      position: 2,
-      el: document.getElementById("carousel-item-3"),
-    },
-    {
-      position: 3,
-      el: document.getElementById("carousel-item-4"),
-    },
-  ];
-
-  const options = {
-    activeItemPosition: 1,
-    interval: 3000,
-
-    indicators: {
-      activeClasses: "bg-white dark:bg-gray-800",
-      inactiveClasses:
-        "bg-white/50 dark:bg-gray-800/50 hover:bg-white dark:hover:bg-gray-800",
-      items: [
-        {
-          position: 0,
-          el: document.getElementById("carousel-indicator-1"),
-        },
-        {
-          position: 1,
-          el: document.getElementById("carousel-indicator-2"),
-        },
-        {
-          position: 2,
-          el: document.getElementById("carousel-indicator-3"),
-        },
-        {
-          position: 3,
-          el: document.getElementById("carousel-indicator-4"),
-        },
-      ],
-    },
-
-    // callback functions
-    onNext: () => {
-      console.log("next slider item is shown");
-    },
-    onPrev: () => {
-      console.log("previous slider item is shown");
-    },
-    onChange: () => {
-      console.log("new slider item has been shown");
-    },
-  };
-
-  const carousel = new Carousel(items, options);
-
-  carousel.cycle();
-</script>
+</BackgroundPicture>
