--- a/src/components/LandingHero.astro
+++ b/src/components/LandingHero.astro
@@ -4,8 +4,8 @@ import { BackgroundPicture } from "astro-imagetools/components";
 ---
 
 <BackgroundPicture
-  attributes={{ class: "brightness-[0.2]" }}
   src="/src/images/firstgallery/3Through.png"
+  objectPosition="50% 80%"
   {...sharedPictureProps}
 >
   <slot />
