--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -15,9 +15,11 @@ const { currentRoute } = Astro.props as Props;
   <div class="flex flex-wrap justify-between items-center mx-auto">
     <a href="/" class="flex items-center">
       <Avatar />
-      <h1 class="self-center text-xl whitespace-nowrap dark:text-white">
-        Luca Pontrandolfo
-      </h1>
+      <div class="ml-4">
+        <h1 class="format self-center text-2xl text-gray-700 dark:text-white">
+          Luca Pontrandolfo
+        </h1>
+      </div>
     </a>
     <div class="flex">
       <button
