--- a/src/components/HeroText.astro
+++ b/src/components/HeroText.astro
@@ -1,4 +1,6 @@
-<h2 class="text-white">
-  <strong>LUCA <br /> PONTRANDOLFO</strong>
-  <div class="font-thin">PORTFOLIO</div>
-</h2>
+<div class="ml-28 pt-[10%]">
+  <h2 class="text-white format text-[9rem] leading-none">
+    <strong>LUCA <br /> PONTRANDOLFO</strong>
+    <div class="font-thin">PORTFOLIO</div>
+  </h2>
+</div>
