--- a/src/components/NavbarItem.astro
+++ b/src/components/NavbarItem.astro
@@ -13,9 +13,9 @@ const { text, href, isActive } = Astro.props as Props;
     href={href}
     rel="prefetch"
     class={`block py-2 pr-4 pl-3 ${
-      isActive ? "text-blue-700" : "text-gray-700"
-    } rounded
-        hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-white
+      isActive ? "text-slate-800" : ""
+    } rounded format leading-none
+        hover:bg-gray-100 md:hover:bg-transparent md:hover:text-slate-800 md:p-0 md:dark:hover:text-white
         dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent
         dark:border-gray-700`}
     >{text}
