--- a/src/pages/paintings.astro
+++ b/src/pages/paintings.astro
@@ -1,8 +1,13 @@
 ---
 import GalleryPaintingsSeries from "../components/GalleryPaintingsSeries/GalleryPaintingsSeries.index.astro";
 import Layout from "../layouts/Layout.astro";
+import { routes } from "../utils/constants.mjs";
 ---
 
-<Layout title="Paintings">
+<Layout
+  title="Paintings"
+  description="Galleria di opere dell'autore raffiguranti quadri pitturati a mano."
+  endpoint={routes.PAINTINGS}
+>
   <GalleryPaintingsSeries />
 </Layout>
