--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -54,7 +54,7 @@ const { currentRoute } = Astro.props as Props;
       >
         <NavbarItem
           text="Home"
-          href="href={routes.INDEX}"
+          href={routes.INDEX}
           isActive={currentRoute === "Homepage"}
         />
         <li>
