--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,10 +1,10 @@
 ---
-import Container from "../components/Container.astro";
+import ContainerTexts from "../components/ContainerTexts.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="404" description="Pagina non trovata.">
-  <Container>
+  <ContainerTexts>
     <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
       <div class="mx-auto max-w-screen-sm text-center">
         <h1
@@ -23,5 +23,5 @@ import Layout from "../layouts/Layout.astro";
         </p>
       </div>
     </div>
-  </Container>
+  </ContainerTexts>
 </Layout>
