fixed image position

--- a/src/components/HeroText.astro
+++ b/src/components/HeroText.astro
@@ -1,5 +1,7 @@
-<div class="ml-28 pt-[10%]">
-  <h2 class="text-white format text-[9rem] leading-none">
+<div class="ml-8 md:ml-16 lg:ml-20 2xl:ml-28 pt-32 lg:pt-[10%]">
+  <h2
+    class="text-white format text-4xl md:text-5xl lg:text-6xl xl:text-7xl 2xl:text-[9rem] leading-none"
+  >
     <strong>LUCA <br /> PONTRANDOLFO</strong>
     <div class="font-thin">PORTFOLIO</div>
   </h2>
