added twitter card support

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,6 +37,10 @@ const { title, description, endpoint } = Astro.props as Props;
         "Torino",
         "astro",
       ]}
+      twitter={{
+        image: "/src/images/fotoPortrait.png",
+        card: "summary",
+      }}
       facebook={{
         image: "/src/images/fotoPortrait.png",
         url: `${WEBSITE_URL}${endpoint ? endpoint : ""}`,
