--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -15,7 +15,7 @@ const { currentRoute } = Astro.props as Props;
 >
   <div class="flex flex-wrap justify-between items-center mx-auto">
     <header>
-      <a href={routes.INDEX} class="flex items-center">
+      <a href={routes.INDEX} class="flex items-center" rel="prefetch">
         <Avatar />
         <div class="ml-4">
           <h1 class="format self-center text-2xl text-gray-700 dark:text-white">
