--- a/src/components/ContainerTexts.astro
+++ b/src/components/ContainerTexts.astro
@@ -1,3 +1,5 @@
-<section class="max-w-5xl mx-auto px-4 md:px-12 pb-6 mt-20 md:mt-24">
+<section
+  class="max-w-lg md:max-w-2xl mx-auto px-4 md:px-12 pb-6 mt-20 md:mt-24"
+>
   <slot />
 </section>
