--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,9 +2,9 @@
 import SocialsBar from "./SocialsBar.astro";
 ---
 
-<footer class="p-4 mt-auto border-t-2 bg-white sm:p-6 dark:bg-gray-900">
-  <div class="sm:flex sm:items-center sm:justify-between">
-    <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
+<footer class="p-4 mt-auto border-t-2 bg-white sm:p-6">
+  <div class="flex flex-col sm:flex-row items-center justify-between">
+    <span class="text-sm text-gray-500 sm:text-center mb-4 sm:mb-0"
       >© 2022 <a href="/" class="hover:underline">Luca Pontrandolfo</a>. All
       Rights Reserved.
     </span>
