fixed swap of color onLoad of the down-arrow

--- a/src/components/ContentPointer.astro
+++ b/src/components/ContentPointer.astro
@@ -4,11 +4,9 @@ import { Icon } from "astro-icon";
 
 <div class="absolute bottom-6 z-10 w-full h-full">
   <div class="flex justify-center items-end h-full">
-    <Icon name="ph:arrow-fat-line-down-fill" class="w-10 h-10 animate-bounce" />
+    <Icon
+      name="ph:arrow-fat-line-down-fill"
+      class="w-10 h-10 animate-bounce text-white"
+    />
   </div>
 </div>
-<style>
-  [astro-icon="ph:arrow-fat-line-down-fill"] {
-    color: rgb(238, 247, 255);
-  }
-</style>
