--- a/src/components/BaseIcon.astro
+++ b/src/components/BaseIcon.astro
@@ -4,12 +4,11 @@ export interface Props {
   name: string;
   title: string;
   sizes?: number;
+  color?: string;
 }
 
-const { name, title, sizes = 6 } = Astro.props as Props;
+const { name, title, sizes = 6, color = "" } = Astro.props as Props;
 ---
 
-<Icon name={name} class={`w-${sizes} h-${sizes}`} fill="currentColor" /><span
-  class="sr-only"
-  >{title}
-</span>
+<Icon name={name} class={`w-${sizes} h-${sizes} ${color}`} fill="currentColor"
+/><span class="sr-only">{title}</span>
