added fix for jumping scrollbar

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -80,6 +80,7 @@ const { title, description, endpoint } = Astro.props as Props;
     font-size: var(--font-size-base);
     color: var(--color-text);
     background-color: var(--color-bg);
+    overflow-y: scroll;
   }
 
   body {
