--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,7 +11,7 @@ import { routes } from "../utils/constants.mjs";
   endpoint={routes.ABOUT}
 >
   <ContainerTexts>
-    <section class="format">
+    <section class="format lg:format-lg max-w-none">
       <h2>Bio</h2>
       <p>
         Luca Pontrandolfo, artista contemporaneo, vive e lavora a Torino
@@ -20,13 +20,16 @@ import { routes } from "../utils/constants.mjs";
       </p>
       <p>
         L.P. lavora essenzialmente in Computer Grafica, Mixed Media su tela,
-        pittura ad Acrilici, Lightbox. Ha partecipato con i propri lavori in
-        varie Mostre collettive e Premi Nazionali e internazionali tra cui:
+        pittura ad Acrilici, Lightbox.
+      </p>
+      <p>
+        Ha partecipato con i propri lavori in varie Mostre Collettive, Premi
+        Nazionali e Internazionali.
       </p>
     </section>
     <hr class="my-10" />
     <section>
-      <header class="format mb-8">
+      <header class="format lg:format-lg max-w-none mb-8">
         <h2>Partecipazioni</h2>
       </header>
       <div class="ml-5">
@@ -104,7 +107,7 @@ import { routes } from "../utils/constants.mjs";
       </div>
     </section>
     <hr class="my-10" />
-    <section class="format">
+    <section class="format lg:format-lg max-w-none">
       <h2>Note Stilistiche</h2>
       <p>
         La ricerca artistica di L.P. si sviluppa in termini prettamente
