--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -12,7 +12,7 @@ import ContainerTexts from "../components/ContainerTexts.astro";
   endpoint={routes.CONTACTS}
 >
   <ContainerTexts>
-    <div class="format">
+    <div class="format lg:format-lg max-w-none">
       <h2>Contatti</h2>
       <p>
         Per informazioni sulle mie opere e le prossime esibizioni, contattatemi
