added playfair diaply for title

--- a/src/components/HeroText.astro
+++ b/src/components/HeroText.astro
@@ -1,8 +1,8 @@
 <div class="ml-8 md:ml-16 lg:ml-20 2xl:ml-28 pt-32 lg:pt-[10%]">
   <h2
-    class="text-white format text-4xl md:text-5xl lg:text-6xl xl:text-7xl 2xl:text-[9rem] leading-none"
+    class="text-white format font-['Playfair_Display'] text-4xl md:text-5xl lg:text-6xl xl:text-7xl 2xl:text-[9rem] leading-none"
   >
-    <strong>LUCA <br /> PONTRANDOLFO</strong>
-    <div class="font-thin">PORTFOLIO</div>
+    <strong class="font-black">LUCA <br /> PONTRANDOLFO</strong>
+    <div class="font-normal">PORTFOLIO</div>
   </h2>
 </div>
