--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,9 @@ import { Seo } from "astro-seo-meta";
 import Footer from "../components/Footer.astro";
 import Navbar from "../components/Navbar.astro";
 import "@fontsource/montserrat/variable.css";
+import "@fontsource/playfair-display/400.css";
+import "@fontsource/playfair-display/900.css";
+import "@fontsource/playfair-display/variable.css";
 import { WEBSITE_URL } from "../utils/constants.mjs";
 
 export interface Props {
