added figcaption tag as proper HTML semantics

--- a/src/components/PictureWrapper.astro
+++ b/src/components/PictureWrapper.astro
@@ -15,10 +15,10 @@ const { src, title } = Astro.props as Props;
   <div
     class="overlay absolute inset-0 z-[2] h-full w-full opacity-0 transition duration-300 ease-out"
   >
-    <div
+    <figcaption
       class="text-white text-xl absolute top-1/2 left-1/2 translate-y-[-50%] translate-x-[-50%] text-center format"
     >
       {title}
-    </div>
+    </figcaption>
   </div>
 </div>
